customize humburger menu and add animation

--- a/platform-builder.html
+++ b/platform-builder.html
@@ -18,9 +18,21 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
       <div class="container-fluid">
         <a class="navbar-brand me-0" href="#" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="wrapper-menu">
+          <div class="line-menu half start"></div>
+          <div class="line-menu"></div>
+          <div class="line-menu half end"></div>
+        </div>
+        <div class="mobile-nav">
+          <a href="/#home" class="page-scroll">Home</a>
+          <a href="/#about" class="page-scroll">About</a>
+          <a href="/#projects" class="page-scroll">Projects</a>
+          <span id="service-link">Service</span>
+          <a href="website-builder.html" id="website-link" class="d-none">Website Builder</a>
+          <a href="platform-builder.html" id="platform-link" class="d-none">Platform Builder</a>
+          <a href="/#contact" class="page-scroll">Contact</a>
+          <a href="/#subscribe" class="page-scroll">Subscribe</a>
+        </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
@@ -505,6 +517,7 @@
     </div>
   </footer>
   <script src="./assets/js/jquery.js"></script>
+  <script src="./assets/js/custom.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
