--- a/website-builder.html
+++ b/website-builder.html
@@ -18,9 +18,21 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
       <div class="container-fluid">
         <a class="navbar-brand me-0" href="#" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="wrapper-menu">
+          <div class="line-menu half start"></div>
+          <div class="line-menu"></div>
+          <div class="line-menu half end"></div>
+        </div>
+        <div class="mobile-nav">
+          <a href="/#home" class="page-scroll">Home</a>
+          <a href="/#about" class="page-scroll">About</a>
+          <a href="/#projects" class="page-scroll">Projects</a>
+          <span id="service-link">Service</span>
+          <a href="website-builder.html" id="website-link" class="d-none">Website Builder</a>
+          <a href="platform-builder.html" id="platform-link" class="d-none">Platform Builder</a>
+          <a href="/#contact" class="page-scroll">Contact</a>
+          <a href="/#subscribe" class="page-scroll">Subscribe</a>
+        </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav ">
@@ -93,14 +105,14 @@
       </p>
     </div>
     <div class="profesional-blog-img d-flex align-items-center justify-content-center">
-      <img src="./assets/img/profesional-blog-img.png" alt="profesional-blog-img"  />
+      <img src="./assets/img/profesional-blog-img.png" alt="profesional-blog-img" />
     </div>
   </section>
   <section class="profesional-logo py-5 overflow-hidden">
     <div class="container-fluid">
       <div class="row gy-4">
         <div class="col-md-6">
-          <img src="./assets/img/profesional-logo-img.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 profesional-logo-img" data-aos="fade-right" data-aos-duration="2000"/>
+          <img src="./assets/img/profesional-logo-img.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 profesional-logo-img" data-aos="fade-right" data-aos-duration="2000" />
         </div>
         <div class="col-md-6">
           <div class="profesional-logo-title h-100 d-flex flex-column justify-content-center">
@@ -194,35 +206,35 @@
                 </li>
               </ul>
               <li>Untuk saat ini belum tersedia.</li>
-                </ul>
-                <span class="fw-semibold">PEMBAYARANNYA MELALUI APA?</span>
-                <ul>
-                  <li>
-                    Kami menyediakan beberapa metode pembayaran seperti, Visa,
-                    Virtual Account Retail Outles dan Ewallets.
-                  </li>
-                </ul>
-                <span class="fw-semibold">APAKAH ADA GARANSI UANG KEMBALI?</span>
-                <ul>
-                  <li>
-                    Ada, selama 14 Hari masa percobaan dengan syarat ketentuan
-                    berlaku di Terms And Condition.
-                  </li>
-                </ul>
-                <span class="fw-semibold">APAKAH ADA BIAYA TAMBAHAN?</span>
-                <ul>
-                  <li>
-                    Ya, jika ada tambahan fitur diluar paket yang kami miliki.
-                  </li>
-                </ul>
-                <span class="fw-semibold">APAKAH ADA DISKON ATAU PROMO?</span>
-                <ul>
-                  <li>
-                    Tentu saja, kami akan selalu memberikan diskon atau promo.
-                    Untuk info diskon atau promo kunjungi akun Instagram Kami
-                    <a href="https://www.instagram.com/nineodofficial/">Disini</a>.
-                  </li>
-                </ul>
+              </ul>
+              <span class="fw-semibold">PEMBAYARANNYA MELALUI APA?</span>
+              <ul>
+                <li>
+                  Kami menyediakan beberapa metode pembayaran seperti, Visa,
+                  Virtual Account Retail Outles dan Ewallets.
+                </li>
+              </ul>
+              <span class="fw-semibold">APAKAH ADA GARANSI UANG KEMBALI?</span>
+              <ul>
+                <li>
+                  Ada, selama 14 Hari masa percobaan dengan syarat ketentuan
+                  berlaku di Terms And Condition.
+                </li>
+              </ul>
+              <span class="fw-semibold">APAKAH ADA BIAYA TAMBAHAN?</span>
+              <ul>
+                <li>
+                  Ya, jika ada tambahan fitur diluar paket yang kami miliki.
+                </li>
+              </ul>
+              <span class="fw-semibold">APAKAH ADA DISKON ATAU PROMO?</span>
+              <ul>
+                <li>
+                  Tentu saja, kami akan selalu memberikan diskon atau promo.
+                  Untuk info diskon atau promo kunjungi akun Instagram Kami
+                  <a href="https://www.instagram.com/nineodofficial/">Disini</a>.
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -416,6 +428,7 @@
     </div>
   </footer>
   <script src="./assets/js/jquery.js"></script>
+  <script src="./assets/js/custom.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
