--- a/index.html
+++ b/index.html
@@ -15,13 +15,28 @@ href="./img/favicon.ico" /> -->
 </head>
 
 <body>
+
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
       <div class="container-fluid">
         <a class="navbar-brand me-0" href="/" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="wrapper-menu">
+          <div class="line-menu half start"></div>
+          <div class="line-menu"></div>
+          <div class="line-menu half end"></div>
+        </div>
+        <div class="mobile-nav">
+          <div class="mobile-nav-body d-block">
+            <a href="#home" class="page-scroll">Home</a>
+            <a href="#about" class="page-scroll">About</a>
+            <a href="#projects" class="page-scroll">Projects</a>
+            <span id="service-link">Service</span>
+            <a href="website-builder.html" id="website-link" class="d-none">Website Builder</a>
+            <a href="platform-builder.html" id="platform-link" class="d-none">Platform Builder</a>
+            <a href="#contact" class="page-scroll">Contact</a>
+            <a href="#subscribe" class="page-scroll">Subscribe</a>
+          </div>
+        </div>
         <div class="collapse navbar-collapse menu-wrapper" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav active">
@@ -60,7 +75,7 @@ href="./img/favicon.ico" /> -->
       </div>
     </nav>
   </header>
-  <section class="hero" id="home" >
+  <section class="hero" id="home">
     <div class="container-fluid">
       <div class="hero-body d-flex flex-column justify-content-center text-center align-items-center text-white" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
         <h1 class="text-uppercase fw-bold mb-4">
@@ -116,7 +131,7 @@ href="./img/favicon.ico" /> -->
                 <span class="fs-5 txt-primary">Trustworthy Partner</span>
               </div>
               <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
-                <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3" ></i>
+                <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
                 <span class="fs-5 txt-primary">Quality Service</span>
               </div>
               <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900">
@@ -170,7 +185,7 @@ href="./img/favicon.ico" /> -->
           </div>
         </div>
         <div class="col-md-4 mb-3">
-          <div class="box-card shadow d-flex flex-column text-center align-items-center" data-aos="fade-left" data-aos-duration="2000"> 
+          <div class="box-card shadow d-flex flex-column text-center align-items-center" data-aos="fade-left" data-aos-duration="2000">
             <img src="./assets/img/Platform.svg" alt="custom-web-app" class="mb-3" />
             <h4 class="fw-bold">Platform Builder</h4>
             <p class="txt-primary">
@@ -185,7 +200,7 @@ href="./img/favicon.ico" /> -->
       </div>
     </section>
   </div>
-  <section class="subscribe overflow-hidden" id="subsribe">
+  <section class="subscribe overflow-hidden" id="subscribe">
     <div class="container">
       <div class="row">
         <div class="col-md-6 mb-3" data-aos="fade-right" data-aos-duration="1500">
@@ -219,13 +234,13 @@ href="./img/favicon.ico" /> -->
       <div class="row gy-4">
         <div class="col-md-6">
           <div class="row g-4">
-            <div class="col-md-6 col-6" >
+            <div class="col-md-6 col-6">
               <div class="history-card shadow text-center" data-aos="fade-right" data-aos-duration="2000">
                 <h1 class="fw-bold text-black">235</h1>
                 <p class="txt-primary m-0">Project Complete</p>
               </div>
             </div>
-            <div class="col-md-6 col-6" >
+            <div class="col-md-6 col-6">
               <div class="history-card shadow text-center" data-aos="fade-right" data-aos-duration="2000">
                 <h1 class="fw-bold text-black">132</h1>
                 <p class="txt-primary m-0">Manage Projects</p>
@@ -507,10 +522,12 @@ href="./img/favicon.ico" /> -->
     </div>
   </footer>
   <script src="./assets/js/jquery.js"></script>
+  <script src="./assets/js/custom.js"></script>
+
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
+
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
-  <script src="./assets/js/custom.js"></script>
 </body>
 
 </html>
