creating service page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/aos/aos.css">
-  <!-- <link rel="icon" type="image/x-icon"
-href="./img/favicon.ico" /> -->
   <title>Nineod | Profesional Website Builder</title>
 </head>
 
@@ -18,7 +16,7 @@ href="./img/favicon.ico" /> -->
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand me-0" href="/" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
         <div class="wrapper-menu">
           <div class="line-menu half start"></div>
@@ -26,16 +24,14 @@ href="./img/favicon.ico" /> -->
           <div class="line-menu half end"></div>
         </div>
         <div class="mobile-nav">
-          <div class="mobile-nav-body d-block">
-            <a href="#home" class="page-scroll">Home</a>
-            <a href="#about" class="page-scroll">About</a>
-            <a href="#projects" class="page-scroll">Projects</a>
-            <span id="service-link">Service</span>
-            <a href="website-builder.html" id="website-link" class="d-none">Website Builder</a>
-            <a href="platform-builder.html" id="platform-link" class="d-none">Platform Builder</a>
-            <a href="#contact" class="page-scroll">Contact</a>
-            <a href="#subscribe" class="page-scroll">Subscribe</a>
-          </div>
+          <a href="#home" class="page-scroll">Home</a>
+          <a href="#about" class="page-scroll">About</a>
+          <a href="#projects" class="page-scroll">Projects</a>
+          <span id="service-link">Service</span>
+          <a href="website-builder.html" id="website-link" class="d-none">Website Builder</a>
+          <a href="platform-builder.html" id="platform-link" class="d-none">Platform Builder</a>
+          <a href="#contact" class="page-scroll">Contact</a>
+          <a href="#subscribe" class="page-scroll">Subscribe</a>
         </div>
         <div class="collapse navbar-collapse menu-wrapper" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
@@ -76,7 +72,7 @@ href="./img/favicon.ico" /> -->
     </nav>
   </header>
   <section class="hero" id="home">
-    <div class="container-fluid">
+    <div class="container">
       <div class="hero-body d-flex flex-column justify-content-center text-center align-items-center text-white" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
         <h1 class="text-uppercase fw-bold mb-4">
           we're provide <br />
@@ -106,8 +102,8 @@ href="./img/favicon.ico" /> -->
     <div class="page-item rounded-circle"></div>
     <div class="page-item rounded-circle"></div>
   </div>
-  <div class="container-fluid">
-    <section class="about py-5 d-flex flex-column overflow-hidden" id="about">
+  <section class="about py-5 d-flex flex-column overflow-hidden" id="about">
+    <div class="container">
       <div class="about-body row mb-5">
         <div class="col-md-6 mb-4">
           <div class="about-image">
@@ -198,8 +194,8 @@ href="./img/favicon.ico" /> -->
           </div>
         </div>
       </div>
-    </section>
-  </div>
+    </div>
+  </section>
   <section class="subscribe overflow-hidden" id="subscribe">
     <div class="container">
       <div class="row">
@@ -266,8 +262,8 @@ href="./img/favicon.ico" /> -->
       </div>
     </div>
   </section>
-  <div class="container-fluid">
-    <section class="projects" id="projects">
+  <section class="projects" id="projects">
+    <div class="container">
       <div class="projects-title d-flex flex-column justify-content-center align-items-center text-center mb-5">
         <h1 class="fw-bold text-black" data-aos="fade-in" data-aos-duration="3000">
           You Can See <br />
@@ -382,8 +378,8 @@ href="./img/favicon.ico" /> -->
           </div>
         </div>
       </div>
-    </section>
-  </div>
+    </div>
+  </section>
   <section class="our-clients py-5 overflow-hidden" id="our-clients">
     <div class="container">
       <div class="our-clients-title d-flex flex-column justify-content-center align-items-center text-center mb-5">
@@ -501,7 +497,7 @@ href="./img/favicon.ico" /> -->
     </div>
   </section>
   <footer>
-    <div class="container-fluid">
+    <div class="container">
       <div class="footer-body d-flex justify-content-between">
         <p class="fw-light footer-title m-0">
           Nineod &copy; 2021 All Rights Reserved
