--- a/website-builder.html
+++ b/website-builder.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/aos/aos.css">k
-  <!-- <link rel="icon" type="image/x-icon" href="./img/favicon.ico" /> -->
   <title>Website Builder | Nineod</title>
 </head>
 
@@ -180,7 +179,7 @@
               <ul>
                 <li>
                   Masuk ke website
-                  <a href="https://www.nineod.com/service">nineod.com/service</a>
+                  <a href="services.html">nineod.com/services</a>
                 </li>
                 <li>Pilih Paket sesuai kebutuhan Anda</li>
                 <li>
