change class container-fluid to container

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="login-email text-white">
-        <div class="container-fluid">
+        <div class="container">
             <div class="d-flex justify-content-center align-items-center flex-column vh-100">
                 <div class="login-email-body">
                     <a href="#" class="fs-3 text-white link-close"><i class="fas fa-times"></i></a>
