--- a/platform-builder.html
+++ b/platform-builder.html
@@ -15,7 +15,7 @@
 <body>
   <header class="position-relative">
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand me-0" href="#" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
         <div class="wrapper-menu">
           <div class="line-menu half start"></div>
@@ -72,7 +72,7 @@
   </header>
   <section class="platform-home">
     <div class="background-dark-thin">
-      <div class="container-fluid">
+      <div class="container">
         <div class="platform-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
           <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             kembangkan bisnis anda secara online
@@ -93,7 +93,7 @@
     <img src="./assets/img/iconfinder_social-whatsapp-circle_4017334.svg" alt="whatsapp-image" class="wa-image rounded-circle" />
   </a>
   <section class="section-one">
-    <div class="container-fluid d-flex">
+    <div class="container d-flex">
       <div class="row gy-4">
         <div class="col-md-6">
           <div class="section-one-title d-flex flex-column" data-aos="fade-right" data-aos-duration="2000">
@@ -144,7 +144,7 @@
     </div>
   </section>
   <section class="section-two py-5 overflow-hidden">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row gy-4">
         <div class="col-md-6">
           <img src="./assets/img/b71c4b_36efeb33a7de4687b9b64ac76e03d939.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 section-two-img" data-aos="fade-right" data-aos-duration="2000" />
@@ -188,7 +188,7 @@
     </div>
   </section>
   <section class="section-one overflow-hidden">
-    <div class="container-fluid d-flex">
+    <div class="container d-flex">
       <div class="row gy-4">
         <div class="col-md-6">
           <div class="section-one-title d-flex flex-column"  data-aos="fade-right" data-aos-duration="2000" >
@@ -238,7 +238,7 @@
     </div>
   </section>
   <section class="make-schedule d-flex flex-column justify-content-center text-center">
-    <div class="container-fluid">
+    <div class="container">
       <h3 class="fw-bold mb-3" data-aos="fade-up" data-aos-duration="2000">Kami Disini Untuk Anda</h3>
       <div data-aos="fade-right" data-aos-duration="2000">
         <p class="m-0">Punya Pertanyaan Seputar Website?</p>
@@ -496,7 +496,7 @@
     </div>
   </section>
   <footer>
-    <div class="container-fluid">
+    <div class="container">
       <div class="footer-body d-flex justify-content-between">
         <p class="fw-light footer-title m-0">
           Nineod &copy; 2021 All Rights Reserved
