--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@
     <section class="services-home">
         <div class="background-dark-thin">
             <div class="container-fluid">
-                <div class="services-home-bo`dy d-flex flex-column justify-content-center text-center align-items-center text-white">
+                <div class="services-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
                     <h1 class="text-capitalize  fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
                         punya bisnis?
                     </h1>
