--- a/website-builder.html
+++ b/website-builder.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navigation">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand me-0" href="#" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000"><img src="./assets/img/Logo_edited.png" alt="logo-nineod" width="70" /></a>
         <div class="wrapper-menu">
           <div class="line-menu half start"></div>
@@ -72,7 +72,7 @@
   </header>
   <section class="website-home">
     <div class="background-dark">
-      <div class="container-fluid">
+      <div class="container">
         <div class="website-home-body d-flex flex-column justify-content-center text-center align-items-center text-white">
           <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
             Buat Website personal Anda
@@ -108,7 +108,7 @@
     </div>
   </section>
   <section class="profesional-logo py-5 overflow-hidden">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row gy-4">
         <div class="col-md-6">
           <img src="./assets/img/profesional-logo-img.jpg" alt="profesional-logo-img" class="img-fluid w-100 h-100 profesional-logo-img" data-aos="fade-right" data-aos-duration="2000" />
@@ -133,7 +133,7 @@
     </div>
   </section>
   <section class="show-creation py-4 overflow-hidden">
-    <div class="container-fluid">
+    <div class="container">
       <div class="show-creation-content d-flex">
         <div class="show-creation-title w-50 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-right" data-aos-duration="2000">Pamerkan Karya Anda Sekarang Juga</h1>
@@ -150,7 +150,7 @@
     </div>
   </section>
   <section class="make-schedule d-flex flex-column justify-content-center text-center">
-    <div class="container-fluid">
+    <div class="container">
       <h3 class="fw-bold mb-3" data-aos="fade-up" data-aos-duration="2000">Kami Disini Untuk Anda</h3>
       <div data-aos="fade-right" data-aos-duration="2000">
         <p class="m-0">Punya Pertanyaan Seputar Website?</p>
@@ -408,7 +408,7 @@
     </div>
   </section>
   <footer>
-    <div class="container-fluid">
+    <div class="container">
       <div class="footer-body d-flex justify-content-between">
         <p class="fw-light footer-title m-0">
           Nineod &copy; 2021 All Rights Reserved
