adding item element in section our clients

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./assets/css/fontawesome/css/all.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/aos/aos.css">
+  <link rel="stylesheet" href="/assets/css/slick/slick.css">
   <title>Nineod | Profesional Website Builder</title>
 </head>
 
@@ -380,7 +381,7 @@
       </div>
     </div>
   </section>
-  <section class="our-clients py-5 overflow-hidden" id="our-clients">
+  <section class="our-clients py-5 mb-5 overflow-hidden" id="our-clients">
     <div class="container">
       <div class="our-clients-title d-flex flex-column justify-content-center align-items-center text-center mb-5">
         <h1 class="fw-bold text-black" data-aos="fade-in" data-aos-duration="3000">
@@ -388,21 +389,42 @@
           <span class="txt-secondary">Clients</span>
         </h1>
       </div>
-
-      <div class="our-clients-body shadow p-5 rounded-pill d-flex justify-content-center align-items-center" data-aos="fade-left" data-aos-duration="2000">
-        <img src="./assets/img/clients-1.webp" alt="clients-1" class="img-fluid rounded-circle me-5" />
-        <div class="desc pt-3">
-          <p class="mb-3 fst-italic">
-            "Good Rails developer and I enjoyed working with their. Speed and
-            communication were great and their Rails skills were good."
-          </p>
-          <p class="fs-4">Janet</p>
+      <div class="d-flex">
+        <div class="box-clients shadow py-4 px-5 m-auto rounded-pill">
+          <div class="box-clients-item d-flex h-100 justify-content-center align-items-center">
+            <img src="./assets/img/clients-1.webp" alt="clients-1" class="img-fluid rounded-circle me-5" />
+            <div class="desc pt-3">
+              <p class="mb-3 fst-italic">
+                "Good Rails developer and I enjoyed working with their. Speed and
+                communication were great and their Rails skills were good."
+              </p>
+              <p class="fs-4">Janet</p>
+            </div>
+          </div>
+          <div class="box-clients-item h-100 d-flex justify-content-center align-items-center">
+            <img src="./assets/img/anna.jpg" alt="clients-1" class="img-fluid rounded-circle me-5" />
+            <div class="desc pt-3">
+              <p class="mb-3 fst-italic">
+                "The required work was done quickly and perfectly. Very effective. Thank you very much."
+              </p>
+              <p class="fs-4">Anna</p>
+            </div>
+          </div>
+          <div class="box-clients-item h-100 d-flex justify-content-center align-items-center">
+            <img src="./assets/img/sergey.jpg" alt="clients-1" class="img-fluid rounded-circle me-5" />
+            <div class="desc pt-3">
+              <p class="mb-3 fst-italic">
+                "Great communicator!Flexible and patient with adjustments on my end."
+              </p>
+              <p class="fs-4">Sergey</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
   <section class="partners" id="partners">
-    <div class="partners-body d-flex flex-nowrap overflow-hidden">
+    <div class="partners-body">
       <img src="./assets/img/github.png" alt="github-logo" class="img-fluid img-partners me-3" />
       <img src="./assets/img/heroku.png" alt="heroku-logo" class="img-fluid img-partners me-3" />
       <img src="./assets/img/Toptal.png" alt="toptal-logo" class="img-fluid img-partners me-3" />
@@ -518,6 +540,7 @@
     </div>
   </footer>
   <script src="./assets/js/jquery.js"></script>
+  <script src="./assets/js/slick/slick.js"></script>
   <script src="./assets/js/custom.js"></script>
 
   <script src="./assets/js/aos/aos.js"></script>
