--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </nav>
   </header>
-  <section class="hero" id="home">
+  <section class="section-row hero" id="home">
     <div class="container">
       <div class="hero-body d-flex flex-column justify-content-center text-center align-items-center text-white" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
         <h1 class="text-uppercase fw-bold mb-4">
@@ -97,13 +97,13 @@
   <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website" class="wa-image-wrapper shadow d-flex justify-content-center align-items-center">
     <img src="./assets/img/iconfinder_social-whatsapp-circle_4017334.svg" alt="whatsapp-image" class="wa-image rounded-circle" />
   </a>
-  <div class="pagination-section">
-    <div class="page-item rounded-circle active"></div>
-    <div class="page-item rounded-circle"></div>
-    <div class="page-item rounded-circle"></div>
-    <div class="page-item rounded-circle"></div>
-  </div>
-  <section class="about py-5 d-flex flex-column overflow-hidden" id="about">
+  <ul class="pagination-section">
+    <li class="page-item"><a href="#home" class="rounded-circle active"></a></li>
+    <li class="page-item"><a href="#about" class="rounded-circle"></a></li>
+    <li class="page-item"><a href="#projects" class="rounded-circle"></a></li>
+    <li class="page-item"><a href="#contact" class="rounded-circle"></a></li>
+  </ul>
+  <section class="section-row about py-5 d-flex flex-column overflow-hidden" id="about">
     <div class="container">
       <div class="about-body row mb-5">
         <div class="col-md-6 mb-4">
@@ -263,7 +263,7 @@
       </div>
     </div>
   </section>
-  <section class="projects" id="projects">
+  <section class="section-row projects" id="projects">
     <div class="container">
       <div class="projects-title d-flex flex-column justify-content-center align-items-center text-center mb-5">
         <h1 class="fw-bold text-black" data-aos="fade-in" data-aos-duration="3000">
@@ -455,7 +455,7 @@
       </p>
     </div>
   </section>
-  <section class="contact py-5" id="contact">
+  <section class="section-row contact py-5" id="contact">
     <div class="contact-body d-flex">
       <div class="contact-card-wrapper w-50">
         <div class="card-contact d-flex background-secondary" data-aos="fade-right" data-aos-duration="2000">
@@ -539,14 +539,13 @@
       </div>
     </div>
   </footer>
-  <script src="./assets/js/jquery.js"></script>
+  <script src="./assets/js/jquery/jquery.js"></script>
+  <script src="./assets/js/jquery/jquery-easing.js"></script>
   <script src="./assets/js/slick/slick.js"></script>
-  <script src="./assets/js/custom.js"></script>
-
+  <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
-
-  <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="./assets/js/custom.js"></script>
 </body>
 
 </html>
