add parallax effect, fixex background when scrolling in about-image

--- a/index.html
+++ b/index.html
@@ -103,43 +103,40 @@
     <li class="page-item"><a href="#projects" class="rounded-circle"></a></li>
     <li class="page-item"><a href="#contact" class="rounded-circle"></a></li>
   </ul>
-  <section class="section-row about py-5 d-flex flex-column overflow-hidden" id="about">
-    <div class="container">
+  <section class="section-row about mb-5 d-flex flex-column overflow-hidden" id="about">
+    <div class="container d-flex flex-column">
       <div class="about-body row mb-5">
-        <div class="col-md-6 mb-4">
+        <div class="about-image-wrap col-md-6">
           <div class="about-image">
-            <img src="./assets/img/about-image.jpg" alt="about-image" class="img-fluid" />
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="d-flex align-items-center h-100">
-            <div class="about-text ps-5">
-              <h1 class="fw-bold text-black" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">
-                What We Have to
-                <span class="txt-secondary">Help</span> Bussines Owner
-              </h1>
-              <p class="txt-primary mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
-                We mainly focus to help Business owner and support them using
-                Our Digital Solution. And our client can focus with their
-                idea, sales and leads.
-              </p>
-              <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="700">
-                <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
-                <span class="fs-5 txt-primary">Trustworthy Partner</span>
-              </div>
-              <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
-                <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
-                <span class="fs-5 txt-primary">Quality Service</span>
-              </div>
-              <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900">
-                <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
-                <span class="fs-5 txt-primary">Competitive Price</span>
-              </div>
-              <div class="about-text-button d-flex justify-content-start" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1000">
-                <button class="btn-start-now text-uppercase text-dark bg-transparent fw-bold border-3 border-dark rounded-0">
-                  start now
-                </button>
-              </div>
+        <div class="about-text-wrap  col-md-6 d-flex align-items-center">
+          <div class="about-text ps-3">
+            <h1 class="fw-bold text-black" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">
+              What We Have to
+              <span class="txt-secondary">Help</span> Bussines Owner
+            </h1>
+            <p class="txt-primary mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
+              We mainly focus to help Business owner and support them using
+              Our Digital Solution. And our client can focus with their
+              idea, sales and leads.
+            </p>
+            <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="700">
+              <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
+              <span class="fs-5 txt-primary">Trustworthy Partner</span>
+            </div>
+            <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
+              <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
+              <span class="fs-5 txt-primary">Quality Service</span>
+            </div>
+            <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900">
+              <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
+              <span class="fs-5 txt-primary">Competitive Price</span>
+            </div>
+            <div class="about-text-button d-flex justify-content-start" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1000">
+              <button class="btn-start-now text-uppercase text-dark bg-transparent fw-bold border-3 border-dark rounded-0">
+                start now
+              </button>
             </div>
           </div>
         </div>
